--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             color: #ffffff;
-            background-color: purple;
+            background-color: rgb(110, 248, 68);
             font-family: Arial, sans-serif;
             font-size: 14px;
         }
